--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/zomato_db
-PORT=5000
+MONGO_URI="mongodb+srv://dileepbanka143:A6PG2BnduZOAelOT@cluster0.czk8s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
