--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI="mongodb+srv://dileepbanka143:A6PG2BnduZOAelOT@cluster0.czk8s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-
+# MONGO_URI=mongodb://127.0.0.1:27017/zomato_db
+MONGO_URI="mongodb+srv://dileepbanka143:cZs0ViYeAWRzBJQv@cluster0.czk8s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT=5000
